// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTheme should create a theme with the correct brand colors 1`] = `
{
  "border": {
    "radius": {
      "2xlarge": 16,
      "large": 8,
      "max": 9999,
      "medium": 4,
      "none": 0,
      "round": "50%",
      "small": 2,
      "xlarge": 12,
      "xsmall": 1,
    },
    "width": {
      "none": 0,
      "thick": 1.5,
      "thicker": 2,
      "thin": 1,
      "thinner": 0.5,
    },
  },
  "breakpoints": {
    "base": 0,
    "l": 1024,
    "m": 768,
    "s": 480,
    "xl": 1200,
    "xs": 320,
  },
  "colors": {
    "onDark": {
      "feedback": {
        "background": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.18)",
          },
          "negative": {
            "intense": "hsla(4, 77%, 40%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.18)",
          },
          "neutral": {
            "intense": "hsla(218, 26%, 18%, 1)",
            "subtle": "hsla(214, 20%, 84%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.18)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.18)",
          },
        },
        "border": {
          "information": {
            "intense": "hsla(200, 84%, 29%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.32)",
          },
          "negative": {
            "intense": "hsla(0, 83%, 33%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.32)",
          },
          "neutral": {
            "intense": "hsla(218, 26%, 18%, 1)",
            "subtle": "hsla(214, 20%, 84%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 82%, 35%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.32)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 21%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.32)",
          },
        },
        "icon": {
          "information": {
            "intense": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(201, 92%, 95%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(0, 100%, 98%, 1)",
          },
          "neutral": {
            "intense": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 27%, 24%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(24, 100%, 96%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(152, 60%, 95%, 1)",
          },
        },
        "text": {
          "information": {
            "intense": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(201, 92%, 95%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(0, 100%, 98%, 1)",
          },
          "neutral": {
            "intense": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 27%, 24%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(24, 100%, 96%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(152, 60%, 95%, 1)",
          },
        },
      },
      "interactive": {
        "background": {
          "gray": {
            "default": "hsla(214, 20%, 84%, 0.12)",
            "disabled": "hsla(214, 20%, 84%, 0.09)",
            "faded": "hsla(214, 20%, 84%, 0.06)",
            "fadedHighlighted": "hsla(214, 20%, 84%, 0.12)",
            "highlighted": "hsla(214, 20%, 84%, 0.18)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.24)",
            "fadedHighlighted": "hsla(200, 84%, 44%, 0.32)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.24)",
            "fadedHighlighted": "hsla(4, 74%, 49%, 0.32)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(220, 22%, 92%, 1)",
            "disabled": "hsla(214, 20%, 84%, 0.18)",
            "faded": "hsla(214, 20%, 84%, 0.12)",
            "fadedHighlighted": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(214, 17%, 76%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.24)",
            "fadedHighlighted": "hsla(25, 90%, 48%, 0.32)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.24)",
            "fadedHighlighted": "hsla(150, 100%, 32%, 0.32)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(332, 100%, 26%)",
            "disabled": "hsla(332, 100%, 26%, 0.12)",
            "faded": "hsla(332, 100%, 26%, 0.12)",
            "fadedHighlighted": "hsla(332, 100%, 26%, 0.09)",
            "highlighted": "hsl(332, 100%, 23%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.56)",
            "faded": "hsla(0, 0%, 0%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.18)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 100%, 0.32)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "border": {
          "gray": {
            "default": "hsla(216, 24%, 31%, 1)",
            "disabled": "hsla(217, 27%, 21%, 1)",
            "faded": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(216, 24%, 31%, 1)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(214, 17%, 76%, 1)",
            "disabled": "hsla(217, 27%, 21%, 1)",
            "faded": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(214, 17%, 76%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(332, 100%, 26%)",
            "disabled": "hsla(332, 100%, 26%, 0.12)",
            "faded": "hsla(332, 100%, 26%, 0.12)",
            "highlighted": "hsl(332, 100%, 23%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "faded": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 84%, 37%, 1)",
            "normal": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(198, 90%, 52%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 77%, 40%, 1)",
            "normal": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 24%, 31%, 1)",
            "normal": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 18%, 62%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 85%, 42%, 1)",
            "normal": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(25, 100%, 55%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 100%)",
            "muted": "hsl(0, 0%, 100%)",
            "normal": "hsl(0, 0%, 100%)",
            "subtle": "hsl(0, 0%, 100%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 100%, 27%, 1)",
            "normal": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(150, 100%, 37%, 1)",
          },
          "primary": {
            "disabled": "hsla(240, 20%, 99%, 1)",
            "muted": "hsla(240, 20%, 99%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(240, 20%, 99%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 84%, 37%, 1)",
            "normal": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(198, 90%, 52%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 77%, 40%, 1)",
            "normal": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 24%, 31%, 1)",
            "normal": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 18%, 62%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 85%, 42%, 1)",
            "normal": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(25, 100%, 55%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 100%)",
            "muted": "hsl(0, 0%, 100%)",
            "normal": "hsl(0, 0%, 100%)",
            "subtle": "hsl(0, 0%, 100%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 100%, 27%, 1)",
            "normal": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(150, 100%, 37%, 1)",
          },
          "primary": {
            "disabled": "hsla(240, 20%, 99%, 1)",
            "muted": "hsla(240, 20%, 99%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(240, 20%, 99%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
      },
      "overlay": {
        "background": {
          "moderate": "hsla(214, 20%, 84%, 0.32)",
          "subtle": "hsla(0, 0%, 0%, 0.8)",
        },
      },
      "popup": {
        "background": {
          "intense": "hsla(217, 27%, 15%, 1)",
          "subtle": "hsla(217, 27%, 15%, 1)",
        },
        "border": {
          "intense": "hsla(214, 20%, 84%, 0.18)",
          "subtle": "hsla(214, 20%, 84%, 0.18)",
        },
      },
      "surface": {
        "background": {
          "cloud": {
            "intense": "hsla(201, 39%, 93%, 1)",
            "subtle": "hsla(200, 91%, 13%, 1)",
          },
          "gray": {
            "intense": "hsla(217, 27%, 15%, 1)",
            "moderate": "hsla(216, 30%, 13%, 1)",
            "subtle": "hsla(214, 44%, 7%, 1)",
          },
          "primary": {
            "intense": "hsl(332, 100%, 26%)",
            "subtle": "hsl(332, 52%, 49%)",
          },
          "sea": {
            "intense": "hsla(180, 42%, 92%, 1)",
            "subtle": "hsla(180, 91%, 13%, 1)",
          },
        },
        "border": {
          "gray": {
            "muted": "hsla(214, 20%, 84%, 0.18)",
            "normal": "hsla(216, 24%, 31%, 1)",
            "subtle": "hsla(217, 27%, 21%, 1)",
          },
          "primary": {
            "muted": "hsla(227, 100%, 59%, 0.32)",
            "normal": "hsla(227, 100%, 59%, 1)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(223, 100%, 65%, 1)",
            "onSubtle": "hsla(220, 100%, 73%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(155, 100%, 31%, 1)",
            "onSubtle": "hsla(150, 59%, 55%, 1)",
          },
          "primary": {
            "normal": "hsl(332, 100%, 26%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(227, 71%, 51%, 1)",
            "onSubtle": "hsla(219, 95%, 85%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(155, 100%, 21%, 1)",
            "onSubtle": "hsla(150, 59%, 82%, 1)",
          },
          "primary": {
            "normal": "hsla(220, 100%, 73%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
      },
      "transparent": "hsla(0, 0%, 100%, 0)",
    },
    "onLight": {
      "feedback": {
        "background": {
          "information": {
            "intense": "hsla(200, 84%, 44%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.09)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.09)",
          },
          "neutral": {
            "intense": "hsla(211, 29%, 26%, 1)",
            "subtle": "hsla(211, 20%, 52%, 0.09)",
          },
          "notice": {
            "intense": "hsla(25, 90%, 48%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.09)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 32%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.09)",
          },
        },
        "border": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.18)",
          },
          "negative": {
            "intense": "hsla(4, 77%, 40%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.18)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 20%, 52%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.18)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.18)",
          },
        },
        "icon": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 88%, 90%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 93%, 94%, 1)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 24%, 65%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 100%, 90%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(151, 57%, 91%, 1)",
          },
        },
        "text": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 88%, 90%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 93%, 94%, 1)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 24%, 65%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 100%, 90%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(151, 57%, 91%, 1)",
          },
        },
      },
      "interactive": {
        "background": {
          "gray": {
            "default": "hsla(211, 20%, 52%, 0.12)",
            "disabled": "hsla(211, 20%, 52%, 0.09)",
            "faded": "hsla(211, 20%, 52%, 0.06)",
            "fadedHighlighted": "hsla(211, 20%, 52%, 0.12)",
            "highlighted": "hsla(211, 20%, 52%, 0.18)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.09)",
            "faded": "hsla(200, 84%, 44%, 0.09)",
            "fadedHighlighted": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.09)",
            "faded": "hsla(4, 74%, 49%, 0.09)",
            "fadedHighlighted": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(211, 29%, 26%, 1)",
            "disabled": "hsla(211, 20%, 52%, 0.18)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "fadedHighlighted": "hsla(211, 20%, 52%, 0.32)",
            "highlighted": "hsla(211, 33%, 21%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.09)",
            "faded": "hsla(25, 90%, 48%, 0.09)",
            "fadedHighlighted": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.09)",
            "faded": "hsla(150, 100%, 32%, 0.09)",
            "fadedHighlighted": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(332, 100%, 26%)",
            "disabled": "hsla(332, 100%, 26%, 0.12)",
            "faded": "hsla(332, 100%, 26%, 0.12)",
            "fadedHighlighted": "hsla(332, 100%, 26%, 0.09)",
            "highlighted": "hsl(332, 100%, 23%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.56)",
            "faded": "hsla(0, 0%, 0%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.18)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 100%, 0.32)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "border": {
          "gray": {
            "default": "hsla(214, 28%, 84%, 1)",
            "disabled": "hsla(214, 40%, 92%, 1)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "highlighted": "hsla(214, 28%, 84%, 1)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(211, 20%, 52%, 1)",
            "disabled": "hsla(214, 28%, 84%, 1)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "highlighted": "hsla(211, 20%, 52%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(332, 100%, 26%)",
            "disabled": "hsla(332, 100%, 26%, 0.12)",
            "faded": "hsla(332, 100%, 26%, 0.12)",
            "highlighted": "hsl(332, 100%, 23%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "faded": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 90%, 65%, 1)",
            "normal": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 93%, 68%, 1)",
            "normal": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 100%, 63%, 1)",
            "normal": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 100%)",
            "muted": "hsl(0, 0%, 100%)",
            "normal": "hsl(0, 0%, 100%)",
            "subtle": "hsl(0, 0%, 100%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 59%, 55%, 1)",
            "normal": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 1)",
          },
          "primary": {
            "disabled": "hsl(332, 100%, 26%)",
            "muted": "hsl(332, 100%, 26%)",
            "normal": "hsl(332, 100%, 26%)",
            "subtle": "hsl(332, 100%, 26%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 90%, 65%, 1)",
            "normal": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 93%, 68%, 1)",
            "normal": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 100%, 63%, 1)",
            "normal": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 100%)",
            "muted": "hsl(0, 0%, 100%)",
            "normal": "hsl(0, 0%, 100%)",
            "subtle": "hsl(0, 0%, 100%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 59%, 55%, 1)",
            "normal": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 1)",
          },
          "primary": {
            "disabled": "hsl(332, 100%, 26%)",
            "muted": "hsl(332, 100%, 26%)",
            "normal": "hsl(332, 100%, 26%)",
            "subtle": "hsl(332, 100%, 26%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
      },
      "overlay": {
        "background": {
          "moderate": "hsla(211, 20%, 52%, 0.32)",
          "subtle": "hsla(0, 0%, 0%, 0.56)",
        },
      },
      "popup": {
        "background": {
          "intense": "hsla(211, 29%, 26%, 1)",
          "subtle": "hsla(0, 0%, 100%, 1)",
        },
        "border": {
          "intense": "hsla(211, 26%, 34%, 1)",
          "subtle": "hsla(211, 20%, 52%, 0.18)",
        },
      },
      "surface": {
        "background": {
          "cloud": {
            "intense": "hsla(200, 61%, 20%, 1)",
            "subtle": "hsla(198, 39%, 95%, 1)",
          },
          "gray": {
            "intense": "hsla(0, 0%, 100%, 1)",
            "moderate": "hsla(210, 40%, 98%, 1)",
            "subtle": "hsla(213, 47%, 96%, 1)",
          },
          "primary": {
            "intense": "hsl(332, 100%, 26%)",
            "subtle": "hsl(332, 52%, 49%)",
          },
          "sea": {
            "intense": "hsla(180, 61%, 20%, 1)",
            "subtle": "hsla(180, 39%, 95%, 1)",
          },
        },
        "border": {
          "gray": {
            "muted": "hsla(211, 20%, 52%, 0.18)",
            "normal": "hsla(211, 27%, 76%, 1)",
            "subtle": "hsla(214, 28%, 84%, 1)",
          },
          "primary": {
            "muted": "hsla(227, 100%, 59%, 0.18)",
            "normal": "hsla(227, 100%, 59%, 1)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(220, 100%, 73%, 1)",
            "onSubtle": "hsla(223, 100%, 65%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(150, 59%, 55%, 1)",
            "onSubtle": "hsla(155, 100%, 31%, 1)",
          },
          "primary": {
            "normal": "hsl(332, 100%, 26%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(219, 95%, 85%, 1)",
            "onSubtle": "hsla(227, 71%, 51%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(150, 59%, 82%, 1)",
            "onSubtle": "hsla(155, 100%, 21%, 1)",
          },
          "primary": {
            "normal": "hsl(332, 100%, 26%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
      },
      "transparent": "hsla(0, 0%, 100%, 0)",
    },
  },
  "elevation": {
    "onDark": {
      "highRaised": "0px 16px 48px -4px hsla(217, 56%, 17%, 0.18)",
      "lowRaised": "0px 2px 16px 0px hsla(217, 56%, 17%, 0.10)",
      "midRaised": "0px 8px 24px 0px hsla(217, 56%, 17%, 0.12)",
      "none": "none",
    },
    "onLight": {
      "highRaised": "0px 16px 48px -4px hsla(217, 56%, 17%, 0.18)",
      "lowRaised": "0px 2px 16px 0px hsla(217, 56%, 17%, 0.10)",
      "midRaised": "0px 8px 24px 0px hsla(217, 56%, 17%, 0.12)",
      "none": "none",
    },
  },
  "motion": {
    "delay": {
      "2xlong": 5000,
      "2xquick": 80,
      "gentle": 480,
      "long": 2000,
      "moderate": 280,
      "xgentle": 960,
      "xlong": 3000,
      "xquick": 160,
    },
    "duration": {
      "2xgentle": 960,
      "2xquick": 80,
      "gentle": 480,
      "moderate": 280,
      "quick": 200,
      "xgentle": 640,
      "xmoderate": 360,
      "xquick": 160,
    },
    "easing": {
      "emphasized": "cubic-bezier(0.5, 0, 0, 1)",
      "entrance": "cubic-bezier(0, 0, 0.2, 1)",
      "exit": "cubic-bezier(0.17, 0, 1, 1)",
      "linear": "cubic-bezier(0, 0, 0, 0)",
      "overshoot": "cubic-bezier(0.5, 0, 0.3, 1.5)",
      "shake": "cubic-bezier(1, 0.5, 0, 0.5)",
      "standard": "cubic-bezier(0.3, 0, 0.2, 1)",
    },
  },
  "name": "custom-83003d",
  "spacing": {
    "0": 0,
    "1": 2,
    "10": 48,
    "11": 56,
    "2": 4,
    "3": 8,
    "4": 12,
    "5": 16,
    "6": 20,
    "7": 24,
    "8": 32,
    "9": 40,
  },
  "typography": {
    "onDesktop": {
      "fonts": {
        "family": {
          "code": ""Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace",
          "heading": ""TASA Orbiter", "TASA Orbiter Fallback Arial", Arial",
          "text": ""Inter", "Inter Fallback Arial", Arial",
        },
        "size": {
          "100": 14,
          "1000": 64,
          "1100": 72,
          "200": 16,
          "25": 10,
          "300": 18,
          "400": 20,
          "50": 11,
          "500": 24,
          "600": 32,
          "700": 40,
          "75": 12,
          "800": 48,
          "900": 56,
        },
        "weight": {
          "bold": 700,
          "medium": 500,
          "regular": 400,
          "semibold": 600,
        },
      },
      "letterSpacings": {
        "100": 0,
        "50": -1,
      },
      "lineHeights": {
        "0": 0,
        "100": 20,
        "1000": 70,
        "1100": 78,
        "200": 24,
        "25": 14,
        "300": 24,
        "400": 26,
        "50": 16,
        "500": 32,
        "600": 38,
        "700": 46,
        "75": 18,
        "800": 56,
        "900": 64,
      },
    },
    "onMobile": {
      "fonts": {
        "family": {
          "code": ""Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace",
          "heading": ""TASA Orbiter", "TASA Orbiter Fallback Arial", Arial",
          "text": ""Inter", "Inter Fallback Arial", Arial",
        },
        "size": {
          "100": 14,
          "1000": 38,
          "1100": 40,
          "200": 16,
          "25": 10,
          "300": 16,
          "400": 18,
          "50": 11,
          "500": 20,
          "600": 24,
          "700": 32,
          "75": 12,
          "800": 34,
          "900": 36,
        },
        "weight": {
          "bold": 700,
          "medium": 500,
          "regular": 400,
          "semibold": 600,
        },
      },
      "letterSpacings": {
        "100": 0,
        "50": -1,
      },
      "lineHeights": {
        "0": 0,
        "100": 20,
        "1000": 46,
        "1100": 48,
        "200": 24,
        "25": 14,
        "300": 22,
        "400": 24,
        "50": 16,
        "500": 26,
        "600": 32,
        "700": 38,
        "75": 18,
        "800": 40,
        "900": 42,
      },
    },
  },
}
`;

exports[`createTheme should create a theme with the correct brand colors 2`] = `
{
  "100": "hsl(332, 57%, 55%)",
  "1000": "hsl(332, 100%, 14%)",
  "200": "hsl(332, 52%, 49%)",
  "300": "hsl(332, 59%, 43%)",
  "400": "hsl(332, 69%, 37%)",
  "50": "hsl(332, 66%, 61%)",
  "500": "hsl(332, 81%, 32%)",
  "600": "hsl(332, 100%, 26%)",
  "700": "hsl(332, 100%, 23%)",
  "800": "hsl(332, 100%, 20%)",
  "900": "hsl(332, 100%, 17%)",
  "a100": "hsla(332, 100%, 26%, 0.12)",
  "a150": "hsla(332, 100%, 26%, 0.09)",
  "a200": "hsla(332, 100%, 26%, 0.18)",
  "a50": "hsla(332, 100%, 26%, 0.09)",
}
`;

exports[`createTheme should create a theme with the correct brand colors 3`] = `
.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsl(332,100%,26%);
  border-color: hsl(332,100%,26%);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsl(332,100%,23%);
  border-color: hsl(332,100%,23%);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsl(332,100%,23%);
  border-color: hsl(332,100%,23%);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsl(332,100%,23%);
  border-color: hsl(332,100%,23%);
  outline: 1px solid hsl(332,52%,49%);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.18);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c4.c4.c4.c4.c4 {
  color: hsl(0,0%,100%);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

<button
  class="c0"
  data-blade-component="button"
  role="button"
  type="button"
>
  <div
    class=" c1"
    data-blade-component="base-box"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
    >
      <div
        class="c4"
        data-blade-component="base-text"
      >
        Pay now
      </div>
    </div>
  </div>
</button>
`;

exports[`createTheme should create a theme with the correct brand colors 4`] = `
{
  "border": {
    "radius": {
      "2xlarge": 16,
      "large": 8,
      "max": 9999,
      "medium": 4,
      "none": 0,
      "round": "50%",
      "small": 2,
      "xlarge": 12,
      "xsmall": 1,
    },
    "width": {
      "none": 0,
      "thick": 1.5,
      "thicker": 2,
      "thin": 1,
      "thinner": 0.5,
    },
  },
  "breakpoints": {
    "base": 0,
    "l": 1024,
    "m": 768,
    "s": 480,
    "xl": 1200,
    "xs": 320,
  },
  "colors": {
    "onDark": {
      "feedback": {
        "background": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.18)",
          },
          "negative": {
            "intense": "hsla(4, 77%, 40%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.18)",
          },
          "neutral": {
            "intense": "hsla(218, 26%, 18%, 1)",
            "subtle": "hsla(214, 20%, 84%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.18)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.18)",
          },
        },
        "border": {
          "information": {
            "intense": "hsla(200, 84%, 29%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.32)",
          },
          "negative": {
            "intense": "hsla(0, 83%, 33%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.32)",
          },
          "neutral": {
            "intense": "hsla(218, 26%, 18%, 1)",
            "subtle": "hsla(214, 20%, 84%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 82%, 35%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.32)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 21%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.32)",
          },
        },
        "icon": {
          "information": {
            "intense": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(201, 92%, 95%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(0, 100%, 98%, 1)",
          },
          "neutral": {
            "intense": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 27%, 24%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(24, 100%, 96%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(152, 60%, 95%, 1)",
          },
        },
        "text": {
          "information": {
            "intense": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(201, 92%, 95%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(0, 100%, 98%, 1)",
          },
          "neutral": {
            "intense": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 27%, 24%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(24, 100%, 96%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(152, 60%, 95%, 1)",
          },
        },
      },
      "interactive": {
        "background": {
          "gray": {
            "default": "hsla(214, 20%, 84%, 0.12)",
            "disabled": "hsla(214, 20%, 84%, 0.09)",
            "faded": "hsla(214, 20%, 84%, 0.06)",
            "fadedHighlighted": "hsla(214, 20%, 84%, 0.12)",
            "highlighted": "hsla(214, 20%, 84%, 0.18)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.24)",
            "fadedHighlighted": "hsla(200, 84%, 44%, 0.32)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.24)",
            "fadedHighlighted": "hsla(4, 74%, 49%, 0.32)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(220, 22%, 92%, 1)",
            "disabled": "hsla(214, 20%, 84%, 0.18)",
            "faded": "hsla(214, 20%, 84%, 0.12)",
            "fadedHighlighted": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(214, 17%, 76%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.24)",
            "fadedHighlighted": "hsla(25, 90%, 48%, 0.32)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.24)",
            "fadedHighlighted": "hsla(150, 100%, 32%, 0.32)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(57, 100%, 52%)",
            "disabled": "hsla(57, 100%, 52%, 0.12)",
            "faded": "hsla(57, 100%, 52%, 0.12)",
            "fadedHighlighted": "hsla(57, 100%, 52%, 0.09)",
            "highlighted": "hsl(57, 100%, 47%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.56)",
            "faded": "hsla(0, 0%, 0%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.18)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 100%, 0.32)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "border": {
          "gray": {
            "default": "hsla(216, 24%, 31%, 1)",
            "disabled": "hsla(217, 27%, 21%, 1)",
            "faded": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(216, 24%, 31%, 1)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(214, 17%, 76%, 1)",
            "disabled": "hsla(217, 27%, 21%, 1)",
            "faded": "hsla(214, 20%, 84%, 0.18)",
            "highlighted": "hsla(214, 17%, 76%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(57, 100%, 52%)",
            "disabled": "hsla(57, 100%, 52%, 0.12)",
            "faded": "hsla(57, 100%, 52%, 0.12)",
            "highlighted": "hsl(57, 100%, 47%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "faded": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 84%, 37%, 1)",
            "normal": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(198, 90%, 52%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 77%, 40%, 1)",
            "normal": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 24%, 31%, 1)",
            "normal": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 18%, 62%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 85%, 42%, 1)",
            "normal": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(25, 100%, 55%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 0%)",
            "muted": "hsl(0, 0%, 0%)",
            "normal": "hsl(0, 0%, 0%)",
            "subtle": "hsl(0, 0%, 0%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 100%, 27%, 1)",
            "normal": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(150, 100%, 37%, 1)",
          },
          "primary": {
            "disabled": "hsl(60, 100%, 55%)",
            "muted": "hsl(60, 100%, 55%)",
            "normal": "hsl(60, 100%, 55%)",
            "subtle": "hsl(60, 100%, 55%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 84%, 37%, 1)",
            "normal": "hsla(200, 90%, 65%, 1)",
            "subtle": "hsla(198, 90%, 52%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 77%, 40%, 1)",
            "normal": "hsla(4, 93%, 68%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 24%, 31%, 1)",
            "normal": "hsla(220, 22%, 92%, 1)",
            "subtle": "hsla(216, 18%, 62%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 85%, 42%, 1)",
            "normal": "hsla(25, 100%, 63%, 1)",
            "subtle": "hsla(25, 100%, 55%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 0%)",
            "muted": "hsl(0, 0%, 0%)",
            "normal": "hsl(0, 0%, 0%)",
            "subtle": "hsl(0, 0%, 0%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 100%, 27%, 1)",
            "normal": "hsla(150, 59%, 55%, 1)",
            "subtle": "hsla(150, 100%, 37%, 1)",
          },
          "primary": {
            "disabled": "hsl(60, 100%, 55%)",
            "muted": "hsl(60, 100%, 55%)",
            "normal": "hsl(60, 100%, 55%)",
            "subtle": "hsl(60, 100%, 55%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
      },
      "overlay": {
        "background": {
          "moderate": "hsla(214, 20%, 84%, 0.32)",
          "subtle": "hsla(0, 0%, 0%, 0.8)",
        },
      },
      "popup": {
        "background": {
          "intense": "hsla(217, 27%, 15%, 1)",
          "subtle": "hsla(217, 27%, 15%, 1)",
        },
        "border": {
          "intense": "hsla(214, 20%, 84%, 0.18)",
          "subtle": "hsla(214, 20%, 84%, 0.18)",
        },
      },
      "surface": {
        "background": {
          "cloud": {
            "intense": "hsla(201, 39%, 93%, 1)",
            "subtle": "hsla(200, 91%, 13%, 1)",
          },
          "gray": {
            "intense": "hsla(217, 27%, 15%, 1)",
            "moderate": "hsla(216, 30%, 13%, 1)",
            "subtle": "hsla(214, 44%, 7%, 1)",
          },
          "primary": {
            "intense": "hsl(57, 100%, 52%)",
            "subtle": "hsl(60, 100%, 58%)",
          },
          "sea": {
            "intense": "hsla(180, 42%, 92%, 1)",
            "subtle": "hsla(180, 91%, 13%, 1)",
          },
        },
        "border": {
          "gray": {
            "muted": "hsla(214, 20%, 84%, 0.18)",
            "normal": "hsla(216, 24%, 31%, 1)",
            "subtle": "hsla(217, 27%, 21%, 1)",
          },
          "primary": {
            "muted": "hsla(227, 100%, 59%, 0.32)",
            "normal": "hsla(227, 100%, 59%, 1)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(223, 100%, 65%, 1)",
            "onSubtle": "hsla(220, 100%, 73%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(155, 100%, 31%, 1)",
            "onSubtle": "hsla(150, 59%, 55%, 1)",
          },
          "primary": {
            "normal": "hsl(57, 100%, 52%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(214, 20%, 84%, 0.32)",
            "muted": "hsla(216, 18%, 62%, 1)",
            "normal": "hsla(240, 20%, 99%, 1)",
            "subtle": "hsla(220, 22%, 92%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(227, 71%, 51%, 1)",
            "onSubtle": "hsla(219, 95%, 85%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(155, 100%, 21%, 1)",
            "onSubtle": "hsla(150, 59%, 82%, 1)",
          },
          "primary": {
            "normal": "hsla(220, 100%, 73%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
      },
      "transparent": "hsla(0, 0%, 100%, 0)",
    },
    "onLight": {
      "feedback": {
        "background": {
          "information": {
            "intense": "hsla(200, 84%, 44%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.09)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.09)",
          },
          "neutral": {
            "intense": "hsla(211, 29%, 26%, 1)",
            "subtle": "hsla(211, 20%, 52%, 0.09)",
          },
          "notice": {
            "intense": "hsla(25, 90%, 48%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.09)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 32%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.09)",
          },
        },
        "border": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 0.18)",
          },
          "negative": {
            "intense": "hsla(4, 77%, 40%, 1)",
            "subtle": "hsla(4, 74%, 49%, 0.18)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 20%, 52%, 0.18)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 0.18)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 0.18)",
          },
        },
        "icon": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 88%, 90%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 93%, 94%, 1)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 24%, 65%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 100%, 90%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(151, 57%, 91%, 1)",
          },
        },
        "text": {
          "information": {
            "intense": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 88%, 90%, 1)",
          },
          "negative": {
            "intense": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 93%, 94%, 1)",
          },
          "neutral": {
            "intense": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 24%, 65%, 1)",
          },
          "notice": {
            "intense": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 100%, 90%, 1)",
          },
          "positive": {
            "intense": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(151, 57%, 91%, 1)",
          },
        },
      },
      "interactive": {
        "background": {
          "gray": {
            "default": "hsla(211, 20%, 52%, 0.12)",
            "disabled": "hsla(211, 20%, 52%, 0.09)",
            "faded": "hsla(211, 20%, 52%, 0.06)",
            "fadedHighlighted": "hsla(211, 20%, 52%, 0.12)",
            "highlighted": "hsla(211, 20%, 52%, 0.18)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.09)",
            "faded": "hsla(200, 84%, 44%, 0.09)",
            "fadedHighlighted": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.09)",
            "faded": "hsla(4, 74%, 49%, 0.09)",
            "fadedHighlighted": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(211, 29%, 26%, 1)",
            "disabled": "hsla(211, 20%, 52%, 0.18)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "fadedHighlighted": "hsla(211, 20%, 52%, 0.32)",
            "highlighted": "hsla(211, 33%, 21%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.09)",
            "faded": "hsla(25, 90%, 48%, 0.09)",
            "fadedHighlighted": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.09)",
            "faded": "hsla(150, 100%, 32%, 0.09)",
            "fadedHighlighted": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(57, 100%, 52%)",
            "disabled": "hsla(57, 100%, 52%, 0.12)",
            "faded": "hsla(57, 100%, 52%, 0.12)",
            "fadedHighlighted": "hsla(57, 100%, 52%, 0.09)",
            "highlighted": "hsl(57, 100%, 47%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.56)",
            "faded": "hsla(0, 0%, 0%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.18)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "fadedHighlighted": "hsla(0, 0%, 100%, 0.32)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "border": {
          "gray": {
            "default": "hsla(214, 28%, 84%, 1)",
            "disabled": "hsla(214, 40%, 92%, 1)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "highlighted": "hsla(214, 28%, 84%, 1)",
          },
          "information": {
            "default": "hsla(200, 84%, 44%, 1)",
            "disabled": "hsla(200, 84%, 44%, 0.18)",
            "faded": "hsla(200, 84%, 44%, 0.18)",
            "highlighted": "hsla(200, 84%, 37%, 1)",
          },
          "negative": {
            "default": "hsla(4, 74%, 49%, 1)",
            "disabled": "hsla(4, 74%, 49%, 0.18)",
            "faded": "hsla(4, 74%, 49%, 0.18)",
            "highlighted": "hsla(4, 77%, 40%, 1)",
          },
          "neutral": {
            "default": "hsla(211, 20%, 52%, 1)",
            "disabled": "hsla(214, 28%, 84%, 1)",
            "faded": "hsla(211, 20%, 52%, 0.18)",
            "highlighted": "hsla(211, 20%, 52%, 1)",
          },
          "notice": {
            "default": "hsla(25, 90%, 48%, 1)",
            "disabled": "hsla(25, 90%, 48%, 0.18)",
            "faded": "hsla(25, 90%, 48%, 0.18)",
            "highlighted": "hsla(25, 85%, 42%, 1)",
          },
          "positive": {
            "default": "hsla(150, 100%, 32%, 1)",
            "disabled": "hsla(150, 100%, 32%, 0.18)",
            "faded": "hsla(150, 100%, 32%, 0.18)",
            "highlighted": "hsla(150, 100%, 27%, 1)",
          },
          "primary": {
            "default": "hsl(57, 100%, 52%)",
            "disabled": "hsla(57, 100%, 52%, 0.12)",
            "faded": "hsla(57, 100%, 52%, 0.12)",
            "highlighted": "hsl(57, 100%, 47%)",
          },
          "staticBlack": {
            "default": "hsla(0, 0%, 0%, 1)",
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "faded": "hsla(0, 0%, 0%, 0.32)",
            "highlighted": "hsla(0, 0%, 0%, 1)",
          },
          "staticWhite": {
            "default": "hsla(0, 0%, 100%, 1)",
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "faded": "hsla(0, 0%, 100%, 0.18)",
            "highlighted": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 90%, 65%, 1)",
            "normal": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 93%, 68%, 1)",
            "normal": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 100%, 63%, 1)",
            "normal": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 0%)",
            "muted": "hsl(0, 0%, 0%)",
            "normal": "hsl(0, 0%, 0%)",
            "subtle": "hsl(0, 0%, 0%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 59%, 55%, 1)",
            "normal": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 1)",
          },
          "primary": {
            "disabled": "hsla(211, 33%, 21%, 1)",
            "muted": "hsla(211, 33%, 21%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 33%, 21%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "information": {
            "disabled": "hsla(200, 84%, 44%, 0.32)",
            "muted": "hsla(200, 90%, 65%, 1)",
            "normal": "hsla(200, 84%, 37%, 1)",
            "subtle": "hsla(200, 84%, 44%, 1)",
          },
          "negative": {
            "disabled": "hsla(4, 74%, 49%, 0.32)",
            "muted": "hsla(4, 93%, 68%, 1)",
            "normal": "hsla(4, 74%, 49%, 1)",
            "subtle": "hsla(4, 86%, 58%, 1)",
          },
          "neutral": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "notice": {
            "disabled": "hsla(25, 90%, 48%, 0.32)",
            "muted": "hsla(25, 100%, 63%, 1)",
            "normal": "hsla(25, 85%, 42%, 1)",
            "subtle": "hsla(25, 90%, 48%, 1)",
          },
          "onPrimary": {
            "disabled": "hsl(0, 0%, 0%)",
            "muted": "hsl(0, 0%, 0%)",
            "normal": "hsl(0, 0%, 0%)",
            "subtle": "hsl(0, 0%, 0%)",
          },
          "positive": {
            "disabled": "hsla(150, 100%, 32%, 0.32)",
            "muted": "hsla(150, 59%, 55%, 1)",
            "normal": "hsla(150, 100%, 27%, 1)",
            "subtle": "hsla(150, 100%, 32%, 1)",
          },
          "primary": {
            "disabled": "hsla(211, 33%, 21%, 1)",
            "muted": "hsla(211, 33%, 21%, 1)",
            "normal": "hsla(211, 33%, 21%, 1)",
            "subtle": "hsla(211, 33%, 21%, 1)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.72)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.8)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.64)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.8)",
          },
        },
      },
      "overlay": {
        "background": {
          "moderate": "hsla(211, 20%, 52%, 0.32)",
          "subtle": "hsla(0, 0%, 0%, 0.56)",
        },
      },
      "popup": {
        "background": {
          "intense": "hsla(211, 29%, 26%, 1)",
          "subtle": "hsla(0, 0%, 100%, 1)",
        },
        "border": {
          "intense": "hsla(211, 26%, 34%, 1)",
          "subtle": "hsla(211, 20%, 52%, 0.18)",
        },
      },
      "surface": {
        "background": {
          "cloud": {
            "intense": "hsla(200, 61%, 20%, 1)",
            "subtle": "hsla(198, 39%, 95%, 1)",
          },
          "gray": {
            "intense": "hsla(0, 0%, 100%, 1)",
            "moderate": "hsla(210, 40%, 98%, 1)",
            "subtle": "hsla(213, 47%, 96%, 1)",
          },
          "primary": {
            "intense": "hsl(57, 100%, 52%)",
            "subtle": "hsl(60, 100%, 58%)",
          },
          "sea": {
            "intense": "hsla(180, 61%, 20%, 1)",
            "subtle": "hsla(180, 39%, 95%, 1)",
          },
        },
        "border": {
          "gray": {
            "muted": "hsla(211, 20%, 52%, 0.18)",
            "normal": "hsla(211, 27%, 76%, 1)",
            "subtle": "hsla(214, 28%, 84%, 1)",
          },
          "primary": {
            "muted": "hsla(227, 100%, 59%, 0.18)",
            "normal": "hsla(227, 100%, 59%, 1)",
          },
        },
        "icon": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(220, 100%, 73%, 1)",
            "onSubtle": "hsla(223, 100%, 65%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(150, 59%, 55%, 1)",
            "onSubtle": "hsla(155, 100%, 31%, 1)",
          },
          "primary": {
            "normal": "hsl(57, 100%, 52%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
        "text": {
          "gray": {
            "disabled": "hsla(211, 20%, 52%, 0.32)",
            "muted": "hsla(211, 22%, 56%, 1)",
            "normal": "hsla(212, 39%, 16%, 1)",
            "subtle": "hsla(211, 26%, 34%, 1)",
          },
          "onCloud": {
            "onIntense": "hsla(219, 95%, 85%, 1)",
            "onSubtle": "hsla(227, 71%, 51%, 1)",
          },
          "onSea": {
            "onIntense": "hsla(150, 59%, 82%, 1)",
            "onSubtle": "hsla(155, 100%, 21%, 1)",
          },
          "primary": {
            "normal": "hsl(57, 100%, 52%)",
          },
          "staticBlack": {
            "disabled": "hsla(0, 0%, 0%, 0.32)",
            "muted": "hsla(0, 0%, 0%, 0.56)",
            "normal": "hsla(0, 0%, 0%, 1)",
            "subtle": "hsla(0, 0%, 0%, 0.72)",
          },
          "staticWhite": {
            "disabled": "hsla(0, 0%, 100%, 0.32)",
            "muted": "hsla(0, 0%, 100%, 0.48)",
            "normal": "hsla(0, 0%, 100%, 1)",
            "subtle": "hsla(0, 0%, 100%, 0.88)",
          },
        },
      },
      "transparent": "hsla(0, 0%, 100%, 0)",
    },
  },
  "elevation": {
    "onDark": {
      "highRaised": "0px 16px 48px -4px hsla(217, 56%, 17%, 0.18)",
      "lowRaised": "0px 2px 16px 0px hsla(217, 56%, 17%, 0.10)",
      "midRaised": "0px 8px 24px 0px hsla(217, 56%, 17%, 0.12)",
      "none": "none",
    },
    "onLight": {
      "highRaised": "0px 16px 48px -4px hsla(217, 56%, 17%, 0.18)",
      "lowRaised": "0px 2px 16px 0px hsla(217, 56%, 17%, 0.10)",
      "midRaised": "0px 8px 24px 0px hsla(217, 56%, 17%, 0.12)",
      "none": "none",
    },
  },
  "motion": {
    "delay": {
      "2xlong": 5000,
      "2xquick": 80,
      "gentle": 480,
      "long": 2000,
      "moderate": 280,
      "xgentle": 960,
      "xlong": 3000,
      "xquick": 160,
    },
    "duration": {
      "2xgentle": 960,
      "2xquick": 80,
      "gentle": 480,
      "moderate": 280,
      "quick": 200,
      "xgentle": 640,
      "xmoderate": 360,
      "xquick": 160,
    },
    "easing": {
      "emphasized": "cubic-bezier(0.5, 0, 0, 1)",
      "entrance": "cubic-bezier(0, 0, 0.2, 1)",
      "exit": "cubic-bezier(0.17, 0, 1, 1)",
      "linear": "cubic-bezier(0, 0, 0, 0)",
      "overshoot": "cubic-bezier(0.5, 0, 0.3, 1.5)",
      "shake": "cubic-bezier(1, 0.5, 0, 0.5)",
      "standard": "cubic-bezier(0.3, 0, 0.2, 1)",
    },
  },
  "name": "custom-fff10a",
  "spacing": {
    "0": 0,
    "1": 2,
    "10": 48,
    "11": 56,
    "2": 4,
    "3": 8,
    "4": 12,
    "5": 16,
    "6": 20,
    "7": 24,
    "8": 32,
    "9": 40,
  },
  "typography": {
    "onDesktop": {
      "fonts": {
        "family": {
          "code": ""Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace",
          "heading": ""TASA Orbiter", "TASA Orbiter Fallback Arial", Arial",
          "text": ""Inter", "Inter Fallback Arial", Arial",
        },
        "size": {
          "100": 14,
          "1000": 64,
          "1100": 72,
          "200": 16,
          "25": 10,
          "300": 18,
          "400": 20,
          "50": 11,
          "500": 24,
          "600": 32,
          "700": 40,
          "75": 12,
          "800": 48,
          "900": 56,
        },
        "weight": {
          "bold": 700,
          "medium": 500,
          "regular": 400,
          "semibold": 600,
        },
      },
      "letterSpacings": {
        "100": 0,
        "50": -1,
      },
      "lineHeights": {
        "0": 0,
        "100": 20,
        "1000": 70,
        "1100": 78,
        "200": 24,
        "25": 14,
        "300": 24,
        "400": 26,
        "50": 16,
        "500": 32,
        "600": 38,
        "700": 46,
        "75": 18,
        "800": 56,
        "900": 64,
      },
    },
    "onMobile": {
      "fonts": {
        "family": {
          "code": ""Menlo", San Francisco Mono, Courier New, Roboto Mono, monospace",
          "heading": ""TASA Orbiter", "TASA Orbiter Fallback Arial", Arial",
          "text": ""Inter", "Inter Fallback Arial", Arial",
        },
        "size": {
          "100": 14,
          "1000": 38,
          "1100": 40,
          "200": 16,
          "25": 10,
          "300": 16,
          "400": 18,
          "50": 11,
          "500": 20,
          "600": 24,
          "700": 32,
          "75": 12,
          "800": 34,
          "900": 36,
        },
        "weight": {
          "bold": 700,
          "medium": 500,
          "regular": 400,
          "semibold": 600,
        },
      },
      "letterSpacings": {
        "100": 0,
        "50": -1,
      },
      "lineHeights": {
        "0": 0,
        "100": 20,
        "1000": 46,
        "1100": 48,
        "200": 24,
        "25": 14,
        "300": 22,
        "400": 24,
        "50": 16,
        "500": 26,
        "600": 32,
        "700": 38,
        "75": 18,
        "800": 40,
        "900": 42,
      },
    },
  },
}
`;

exports[`createTheme should create a theme with the correct brand colors 5`] = `
{
  "100": "hsl(60, 100%, 60%)",
  "1000": "hsl(57, 100%, 32%)",
  "200": "hsl(60, 100%, 58%)",
  "300": "hsl(60, 100%, 57%)",
  "400": "hsl(60, 100%, 55%)",
  "50": "hsl(60, 100%, 61%)",
  "500": "hsl(58, 100%, 54%)",
  "600": "hsl(57, 100%, 52%)",
  "700": "hsl(57, 100%, 47%)",
  "800": "hsl(57, 100%, 42%)",
  "900": "hsl(57, 100%, 37%)",
  "a100": "hsla(57, 100%, 52%, 0.12)",
  "a150": "hsla(57, 100%, 52%, 0.09)",
  "a200": "hsla(57, 100%, 52%, 0.18)",
  "a50": "hsla(57, 100%, 52%, 0.09)",
}
`;

exports[`createTheme should create a theme with the correct brand colors 6`] = `
.c0.c0.c0.c0.c0 {
  min-height: 36px;
  width: auto;
  cursor: pointer;
  background-color: hsl(57,100%,52%);
  border-color: hsl(57,100%,52%);
  border-width: 0px;
  border-radius: 4px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  position: relative;
}

.c0.c0.c0.c0.c0:hover {
  background-color: hsl(57,100%,47%);
  border-color: hsl(57,100%,47%);
}

.c0.c0.c0.c0.c0:active {
  background-color: hsl(57,100%,47%);
  border-color: hsl(57,100%,47%);
}

.c0.c0.c0.c0.c0:focus-visible {
  background-color: hsl(57,100%,47%);
  border-color: hsl(57,100%,47%);
  outline: 1px solid hsl(60,100%,58%);
  box-shadow: 0px 0px 0px 4px hsla(227,100%,59%,0.32);
}

.c0.c0.c0.c0.c0 * {
  -webkit-transition-property: color,fill,opacity;
  transition-property: color,fill,opacity;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c1.c1.c1.c1.c1 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition-duration: cubic-bezier(0.3,0,0.2,1);
  transition-duration: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-timing-function: 160px;
  transition-timing-function: 160px;
}

.c4.c4.c4.c4.c4 {
  color: hsl(0,0%,0%);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c3.c3.c3.c3.c3 {
  opacity: 1;
}

<button
  class="c0"
  data-blade-component="button"
  role="button"
  type="button"
>
  <div
    class=" c1"
    data-blade-component="base-box"
  >
    <div
      class="c2 c3"
      data-blade-component="base-box"
    >
      <div
        class="c4"
        data-blade-component="base-text"
      >
        Pay now
      </div>
    </div>
  </div>
</button>
`;
